--- a/opencog/distvalue/CMakeLists.txt
+++ b/opencog/distvalue/CMakeLists.txt
@@ -1,21 +1,28 @@
+INCLUDE_DIRECTORIES (
+	${CMAKE_BINARY_DIR}       # for the distv atom types
+)
+
 ADD_LIBRARY (distvalue
 	DVecUtils.cc
 	CoverTree.cc
     CTHist.cc
+	DistributionalValue.cc
 )
 
 TARGET_LINK_LIBRARIES(distvalue
+	distv-types
 	${COGUTIL_LIBRARY}
 )
 
 INSTALL (TARGETS distvalue
-    EXPORT DISTVTargets
+	EXPORT DISTVTargets
 	DESTINATION "lib${LIB_DIR_SUFFIX}/opencog"
 )
 
 INSTALL (FILES
 	DVecUtils.h
 	CoverTree.h
-    CTHist.h
+	CTHist.h
+	DistributionalValue.h
 	DESTINATION "include/opencog/atoms/distvalue"
 )
