--- a/opencog/distvalue/CMakeLists.txt
+++ b/opencog/distvalue/CMakeLists.txt
@@ -1,6 +1,7 @@
 ADD_LIBRARY (distvalue
 	DVecUtils.cc
 	CoverTree.cc
+    CTHist.cc
 )
 
 TARGET_LINK_LIBRARIES(distvalue
@@ -15,5 +16,6 @@ INSTALL (TARGETS distvalue
 INSTALL (FILES
 	DVecUtils.h
 	CoverTree.h
+    CTHist.h
 	DESTINATION "include/opencog/atoms/distvalue"
 )
